[package]
name = "forensic-adb"
version = "0.5.1"
authors = ["Mozilla", "kpcyrd <git@rxv.cc>"]
description = "Tokio based client library for the Android Debug Bridge (adb) based on mozdevice"
keywords = [
    "adb",
    "android"
]
license = "MPL-2.0"
repository = "https://github.com/kpcyrd/forensic-adb"
edition = "2021"

[dependencies]
log = { version = "0.4", features = ["std"] }
once_cell = "1.4.0"
regex = { version = "1", default-features = false, features = ["perf", "std"] }
tempfile = "3"
thiserror = "1.0.25"
unix_path = "1.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
walkdir = "2"
